add_executable(test_assumptions test_assumptions.cu)
target_link_libraries(test_assumptions fcuda)
add_test(assumptions test_assumptions)

add_executable(test_cudaGetDevice test_cudaGetDevice.F90)
target_link_libraries(test_cudaGetDevice fcuda)
add_test(cudaGetDevice test_cudaGetDevice)

add_executable(test_cudaMalloc test_cudaMalloc.F90)
target_link_libraries(test_cudaMalloc fcuda)
add_test(cudaMalloc test_cudaMalloc)

add_executable(test_cudaHostRegister test_cudaHostRegister.F90)
target_link_libraries(test_cudaHostRegister fcuda)
add_test(cudaHostRegister test_cudaHostRegister)

add_executable(test_array_add array_add.cu test_array_add.F90)
target_link_libraries(test_array_add fcuda)
add_test(array_add test_array_add)

add_executable(test_array_add_2d array_add.cu test_array_add_2d.F90)
target_link_libraries(test_array_add_2d fcuda)
add_test(array_add_2d test_array_add_2d)

add_executable(test_asynchronous_operations asynchronous_operations.cu test_asynchronous_operations.F90)
target_link_libraries(test_asynchronous_operations fcuda)
add_test(asynchronous_operations test_asynchronous_operations)
